--- a/src/sass/config/_default.scss
+++ b/src/sass/config/_default.scss
@@ -6,17 +6,17 @@
 
 :root {
   --bg-primary: 25, 26, 27;
-  --bg-secondary: 40, 41, 43;
-  --bg-tertiary: 50, 51, 53;
+  --bg-secondary: 38, 39, 41;
+  --bg-tertiary: 58, 59, 61;
 
   // Fuentes
-  --fnt-primary: 237, 237, 237;
-  --fnt-secondary: 169, 171, 173;
+  --fnt-primary: 235, 235, 235;
+  --fnt-secondary: 170, 172, 174;
   --fnt-tertiary: 110, 112, 114;
   --fnt-active: 255, 255, 255;
 
   // Principales
-  --tn-primary: 55, 115, 236;
+  --tn-primary: 32, 108, 255;
   --tn-secondary: 36, 66, 125;
 
   // Fuentes
